@@ -86,7 +86,7 @@ $addButtonColumn = new CCol(
 	empty($this->data['work_slide'])
 		? new CButton('add', _('Add'),
 			'return PopUp("popup.php?srctbl=screens&srcfld1=screenid&dstfrm='.$slideForm->getName().
-				'&multiselect=1", 450, 450)',
+				'&multiselect=1&writeonly=1", 450, 450)',
 			'link_menu')
 		: null,
 	null,
